--- a/src/styles/LoginPopup.css
+++ b/src/styles/LoginPopup.css
@@ -2,11 +2,28 @@
   position: absolute;
   height: 50px;
   top: 55px;
+  padding-top: 10px;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+  flex-direction: row;
   background: white;
   z-index: 99999;
   border-radius: 5px;
   box-shadow: 0px 3px 10px hsla(0, 0%, 0%, 0.4);
+  left: 67.5%;
+  width: 32.5%;
+}
+
+.LoginPopup::before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
+  position: absolute;
+  top: -10px;
   left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
+  transform: translateX(-50%)
 }
